<resources>
    <!--App Content-->
    <string name="app_name">enWrite</string>
    <string name="ic_main_login">Login Brand Icon</string>
    <string name="enWrite">enWrite</string>

    <!--Buttons-->
    <string name="login_button">Login</string>
    <string name="signup_button">Sign-Up</string>

    <!--Messages for Login - SignUp-->
    <string name="welcome_message">Please Login or Sign-Up to Continue</string>
    <string name="welcome_message_2">Welcome</string>
    <string name="login_succes">Successfully logged In</string>
    <string name="no_user">User Does Not Exist, Try Sign-Up</string>
    <string name="invalid_credentials">Invalid Username or Password, Try Again</string>
    <string name="some_error">Some Error Has Occurred</string>
    <string name="name">Name</string>
    <string name="profile_title">Add a Picture to Your Account</string>
    <string name="Cont">Continue</string>
    <!--URL-->
    <string name="url">http://192.168.43.205:5000/</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="title_activity_notes_screen">NotesScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="add_new_note_button">Add New Note Button</string>
    <string name="demo_te_xt">Demo Text</string>
    <string name="search">Search</string>
    <string name="title">enTitle Here</string>
    <string name="enwrite_here">enWrite Here</string>
    <string name="start_typing">Start Typing</string>
    <string name="clear">Clear</string>
    <string name="logout">Logout</string>
    <string name="Description">Description</string>
    <string name="password">Password</string>
    <string name="paragraph">A paragraph is a number of sentences grouped together and relating to one topic. Or, a group of related sentences that develop a single point. This definition shows that the paragraphs of compositions are not mere arbitrary divisions. The division of a chapter into paragraphs must be made according to the changes of ideas introduced.</string>
    <string name="note_title">Note Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="pinned">Pinned Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="all_notes">All Notes</string>
</resources>