<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.srvraj311.NotesScreen"
    >
    <item android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:iconTint="@color/colorPrimaryBackground"
        />
    <item android:id="@+id/menuSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimaryBackground"
        />
    <item android:id="@+id/menuAbout"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimaryBackground"
        />
    <item android:id="@+id/menuLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimaryBackground"
        />
</menu>