<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteScreen.NotesScreen"
    android:background="@color/dark_gray"
    android:clipChildren="false">
<ProgressBar
    android:id="@+id/progressBar3"
    style="?android:attr/progressBarStyle"
    android:layout_width="69dp"
    android:layout_height="48dp"
    android:visibility="gone"

    />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8sp"
    android:layout_marginBottom="12sp">

<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--            android:id="@+id/swipe_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->
<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:id="@+id/recylerViewHolder"-->
<!--                />-->
<!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

</RelativeLayout>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pinned"
                    android:padding="12dp"
                    android:fontFamily="@font/actor"
                    android:textSize="16sp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/recylerViewHolder2"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_notes"
                    android:padding="12dp"
                    android:fontFamily="@font/actor"
                    android:textSize="16sp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/recylerViewHolder"
                    android:paddingBottom="60dp"
                    />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/app_bar_menu_2"
        app:hideOnScroll="true"
        app:navigationIcon="@drawable/ic_menu"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="10dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/add_new_note_button"
        android:src="@drawable/ic_add"
        app:tint="@color/colorWhite"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="35dp"
        app:rippleColor="@color/colorPrimary"
        />



</androidx.coordinatorlayout.widget.CoordinatorLayout>